# parallel-lenet5

./: .gitignore  CMakeLists.txt  README.md
include/utils/: file_io.h
scripts/: convert_image.py
src/baseline/: main.cpp
src/cuda/: conv1.cu  conv2.cu  fc1.cu  fc2.cu  fc3.cu  infer.cu  pool1.cu  pool2.cu
src/utils/: file_io.cpp
